correct left margin on mobile

--- a/_sass/krlx.scss
+++ b/_sass/krlx.scss
@@ -91,7 +91,7 @@ nav{
 }
 
 main{
-  margin-left: 24px;
+  padding-left: 24px;
   
   h1{
     margin-top: 0;
